# stock_facil

./: .gitignore  main.py  pyproject.toml
auth/: api.py  auth.py  schemas.py
conteostock/: api.py  apps.py  models.py  schemas.py
conteostock/migrations/: 0001_initial.py
core/: settings.py  urls.py
core/apis/: auth_api.py  conteostock_api.py  dashboard_api.py  local_api.py  plantillastock_api.py  producto_api.py  unidad_medida_api.py  usuario_api.py  usuario_local_api.py
core/management/commands/: startninjaapp.py
core/utils/: compress_image.py  delete_image_file.py  search_filter.py
cuenta/: models.py  schemas.py
cuenta/management/commands/: crear_cuenta_admin.py  editar_cuenta.py
cuenta/migrations/: 0001_initial.py  0002_cuenta_cantidad_maxima_de_conteo_stock_and_more.py  0003_cuenta_cantidad_maxima_unidadades_de_medida.py
dashboard/: api.py  schemas.py
local/: api.py  models.py  schemas.py  usuario_local_api.py
local/migrations/: 0001_initial.py
plantillastock/: api.py  apps.py  models.py  schemas.py
plantillastock/migrations/: 0001_initial.py
producto/: api.py  models.py  schemas.py
producto/migrations/: 0001_initial.py  0002_producto_unidad_medida.py  0003_alter_producto_unidad_medida.py  0004_alter_producto_unique_together.py
unidad_medida/: api.py  apps.py  models.py  schemas.py
unidad_medida/migrations/: 0001_initial.py
usuario/: api.py  models.py  schemas.py
usuario/migrations/: 0001_initial.py
